--- a/app/assets/stylesheets/bootswatch.css.scss
+++ b/app/assets/stylesheets/bootswatch.css.scss
@@ -1,6 +1,6 @@
 
 // First import Bootswatch theme variables http://bit.ly/KIu8IN
-@import 'bootswatch/slate/variables';
+// @import 'bootswatch/slate/variables';
 
 // Use Twitter Bootstrap
 @import "bootstrap-sprockets";
