--- a/app/views/layouts/_navbar_logout.html.erb
+++ b/app/views/layouts/_navbar_logout.html.erb
@@ -10,9 +10,10 @@
   </div>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
       <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-      <li><a href="login">Login</a></li>
-      <li><a href="users">Users</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a data-method="delete" href="/" rel="nofollow">Logout</a></li>
+      <li><a href="friendships">Friends</a></li>
+      <li><a href="users">Find</a></li>
     </ul>
   </div>
 </nav>
