--- a/app/assets/stylesheets/corgi.css
+++ b/app/assets/stylesheets/corgi.css
@@ -3,7 +3,6 @@
 	Author: Damian Sowers
 */
 body {
-	background: url("../img/billie_holiday.png") repeat;
 }
 .navbar-inner {
 	padding-top:10px;
@@ -19,11 +18,11 @@ body {
 	font-size:30px;
 	font-size: 28px;
 	font-weight: 400;
-	color: #eee;
+	color: #ebebeb;
 	text-shadow: 0 2px 0 #000;
 }
 .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
-	color: #eee;
+	color: #ebebeb;
 	text-decoration: none;
 	background-color: #222;
 	margin-top:-10px;
@@ -37,7 +36,7 @@ body {
 	float: none;
 	font-size:14px;
 	padding: 10px 15px 10px;
-	color: #eee;
+	color: #ebebeb;
 	text-decoration: none;
 	text-shadow: 0 1px 0 #000;
 }
@@ -54,16 +53,15 @@ body {
 	}
 }
 .well {
-	border: 1px solid #ddd;
-	background: -webkit-linear-gradient(top, #ffffff, #f9f9f9);
-	background: -moz-linear-gradient(top, #ffffff, #f9f9f9);
-	background-color: #fff;
+	border: 1px solid #4E5D6C;
+	background-color: #4E5D6C;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius:5px;
+	margin-bottom:1px;
 }
 .corgi_well {
-	background-color:#fff;
+	background-color:#4e5d6c;
 	padding: 20px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -75,7 +73,7 @@ body {
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
 .corgi_feed_well {
-	background-color:#fff;
+	background-color:#4e5d6c;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
@@ -108,7 +106,7 @@ body {
 	float:left;
 	width:80%;
 	font-size:18px;
-	color:#666;
+	color: #ebebeb;
 }
 .bottom_meta {
 	margin-top:-10px;
@@ -133,9 +131,6 @@ body {
 }
 .bottom_right span {
 	color:#ccc;
-}
-.bottom_right a {
-	font-weight:bold;
 }
 .comment_area {
 	display:none;
