--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
 <% if current_user.blank? %>
-  <%= render 'home/stranger_page' %>
   <%= render 'posts/index' %>
 <% else %>
-  <%= render 'home/user_page' %>
+  <%= render 'posts/index' %>
 <% end %>
 </div> 
