--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -1,5 +1,5 @@
-<div class="jumbotron">
   <%= form_tag logins_path, class: 'form-horizontal', role: 'form' do %>
+  <div class="form-group">
     <select name='user_id' id="user-id">
       <% for user in @users %>
         <option value="<%= user.id %>">
@@ -7,6 +7,6 @@
         </option>
       <% end %>
     </select>
+    </div>
     <%= submit_tag "Log In", class: 'btn btn-success' %>
   <% end %>
-</div>
